--- a/box.css
+++ b/box.css
@@ -5,6 +5,12 @@ body {
   color: white;
   font-size: 1.4em;
 }
+
+class {position: absolute;
+}
+.image1 { top: 200px;
+  left: 200px;
+}
 h1 {
   color:yellow;
   margin-top: 50px;
